Fixed: - Create goal with topic returns error Implemented: - Load list of goals with approaches